# Sim-Packets

./: package-lock.json  package.json
.github/workflows/: pub.yml
history/: why_1µ_tempo.md
src/: App.vue  app.test.js  main.ts  simulationStore.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/examples/: count_check.rs
src-tauri/src/: commandes.rs  errors.rs  lib.rs  main.rs
src-tauri/src/tauri_state/: mod.rs  sim_packet.rs  sim_packets.rs
src/components/: AdapterSelection.vue  AddInterfaceModal.vue  ControlButtons.vue  HeaderComponent.vue  OptionsSection.vue  PacketFileSelection.vue  SendingInfoSection.vue
