[package]
name = "sim_packets"
version = "0.1.0"
description = "PCAP replay tool: sends packets from capture files over a network interface"
authors = ["Cyprien Avico <akmot9@proton.me>"]
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Interdit les panics évitables dans le code de prod.
# Les tests sont exemptés via clippy.toml (allow-unwrap-in-tests).
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sim_packets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

pnet = "0.35.0"
pcap = "2.4.0"

[profile.release]
debug = false
strip = "symbols"
